--- a/p8105_hw2_fx2212.md
+++ b/p8105_hw2_fx2212.md
@@ -3,3 +3,142 @@ p8105_hw2_fx2212
 Fenglin Xie
 2025-09-29
 
+``` r
+library(tidyverse)
+```
+
+    ## ── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──
+    ## ✔ dplyr     1.1.4     ✔ readr     2.1.5
+    ## ✔ forcats   1.0.0     ✔ stringr   1.5.1
+    ## ✔ ggplot2   3.5.2     ✔ tibble    3.3.0
+    ## ✔ lubridate 1.9.4     ✔ tidyr     1.3.1
+    ## ✔ purrr     1.1.0     
+    ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
+    ## ✖ dplyr::filter() masks stats::filter()
+    ## ✖ dplyr::lag()    masks stats::lag()
+    ## ℹ Use the conflicted package (<http://conflicted.r-lib.org/>) to force all conflicts to become errors
+
+## Problem 1
+
+### clean the data in pols-month.csv
+
+``` r
+pols_month_df = 
+  read_csv("fivethirtyeight_datasets/pols-month.csv") |> 
+  janitor::clean_names() |> 
+  separate(
+    col = mon,
+    into = c("year", "month", "day")
+  ) |> 
+  mutate(
+    year = as.integer(year),
+    month = as.integer(month),
+    day = as.integer(day),
+    month = month.name[month],
+    president = case_when(
+      prez_gop == 1 ~ "gop",
+      prez_dem == 1 ~ "dem",
+      TRUE ~ NA_character_
+    )
+  ) |>
+  select(-prez_dem, -prez_gop, -day) 
+```
+
+    ## Rows: 822 Columns: 9
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl  (8): prez_gop, gov_gop, sen_gop, rep_gop, prez_dem, gov_dem, sen_dem, r...
+    ## date (1): mon
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+### clean the data in snp.csv
+
+``` r
+snp_df =
+  read_csv("fivethirtyeight_datasets/snp.csv") |> 
+  janitor::clean_names() |>
+  mutate(
+    date = mdy(date)
+  ) |> 
+  mutate(
+    year = year(date),
+    month = month(date),
+    month = month.name[month]
+  ) |> 
+  select(year, month, close) |> 
+  arrange(year, match(month, month.name))
+```
+
+    ## Rows: 787 Columns: 2
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (1): date
+    ## dbl (1): close
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+### tidy the unemployment data
+
+``` r
+unemployment_df = 
+  read_csv("fivethirtyeight_datasets/unemployment.csv") |> 
+  janitor::clean_names() |> 
+  pivot_longer(
+    cols = jan:dec,
+    names_to = "month",
+    values_to = "unemployment_rate"
+  ) |> 
+  mutate(
+      month = case_when(
+      month == "jan" ~ "January",
+      month == "feb" ~ "February", 
+      month == "mar" ~ "March",
+      month == "apr" ~ "April",
+      month == "may" ~ "May",
+      month == "jun" ~ "June",
+      month == "jul" ~ "July",
+      month == "aug" ~ "August",
+      month == "sep" ~ "September",
+      month == "oct" ~ "October",
+      month == "nov" ~ "November",
+      month == "dec" ~ "December"
+    )
+  ) 
+```
+
+    ## Rows: 68 Columns: 13
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl (13): Year, Jan, Feb, Mar, Apr, May, Jun, Jul, Aug, Sep, Oct, Nov, Dec
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+### Join the datasets
+
+``` r
+merging_df =
+  left_join(pols_month_df, snp_df, by = c("year", "month")) |> 
+  left_join(unemployment_df, by = c("year", "month"))
+```
+
+### description of each dataset
+
+For the pols-month dataset, the dimension is (822, 9), the range of
+years is ( 1947, 2015) and the names of key values include year, month,
+gov_gop, sen_gop, rep_gop, gov_dem, sen_dem, rep_dem, president.
+
+For the snp dataset, the dimension is (787, 3), the range of years is (
+1969, 2068) and the names of key values include year, month, close.
+
+For the unemployment dataset, the dimension is (816, 3), the range of
+years is ( 1948, 2015) and the names of key values include year, month,
+unemployment_rate.
+
+For the resulting dataset, the dimension is (822, 11), the range of
+years is ( 1947, 2015) and the names of key values include year, month,
+gov_gop, sen_gop, rep_gop, gov_dem, sen_dem, rep_dem, president, close,
+unemployment_rate.
