--- a/p8105_hw2_fx2212.md
+++ b/p8105_hw2_fx2212.md
@@ -153,7 +153,7 @@ unemployment_rate.
 
 ``` r
 mr_trash_wheel =
-  read_excel("202409 Trash Wheel Collection Data.xlsx", sheet = "Mr. Trash Wheel") |> 
+  read_excel("202509 Trash Wheel Collection Data.xlsx", sheet = "Mr. Trash Wheel") |> 
   janitor::clean_names() |>
   filter(!is.na(dumpster)) |> 
   mutate(
@@ -170,7 +170,7 @@ mr_trash_wheel =
 ### Read and clean the Professor Trash Wheel
 
 ``` r
-prof_trash_wheel <- read_excel("202409 Trash Wheel Collection Data.xlsx", sheet = "Professor Trash Wheel") |> 
+prof_trash_wheel <- read_excel("202509 Trash Wheel Collection Data.xlsx", sheet = "Professor Trash Wheel") |> 
   janitor::clean_names()  |> 
   filter(!is.na(dumpster))  |> 
   mutate(
@@ -182,11 +182,11 @@ prof_trash_wheel <- read_excel("202409 Trash Wheel Collection Data.xlsx", sheet 
 ### Read and clean the Gwynnda Trash Wheel
 
 ``` r
-gwynnda_trash_wheel <- read_excel("202409 Trash Wheel Collection Data.xlsx", sheet = "Gwynnda Trash Wheel")  |> 
+gwynns_trash_wheel <- read_excel("202509 Trash Wheel Collection Data.xlsx", sheet = "Gwynns Falls Trash Wheel")  |> 
   janitor::clean_names()  |> 
   filter(!is.na(dumpster))  |> 
   mutate(
-    wheel = "Gwynnda Trash Wheel",
+    wheel = "Gwynns Falls Trash Wheel",
     year = as.numeric(year)
   )
 ```
@@ -194,7 +194,7 @@ gwynnda_trash_wheel <- read_excel("202409 Trash Wheel Collection Data.xlsx", she
 ### combine dataset
 
 ``` r
-all_trash_wheel <- bind_rows(mr_trash_wheel, prof_trash_wheel, gwynnda_trash_wheel)
+all_trash_wheel <- bind_rows(mr_trash_wheel, prof_trash_wheel, gwynns_trash_wheel)
 ```
 
 ### description of the resulting dataset
@@ -207,20 +207,50 @@ total_prof_weight =
 ```
 
 ``` r
-gwynnda_june_2022 =
+gwynns_june_2022 =
   all_trash_wheel |> 
-  filter(wheel == "Gwynnda Trash Wheel", 
+  filter(wheel == "Gwynns Falls Trash Wheel", 
          year == 2022, 
          month == "June")  |> 
   summarise(total_cigarettes = sum(cigarette_butts, na.rm = TRUE))
 ```
 
-The number of observations in the resulting dataset is 1033 and the key
+The number of observations in the resulting dataset is 1188 and the key
 variables include dumpster, month, year, date, weight_tons,
 volume_cubic_yards, plastic_bottles, polystyrene, cigarette_butts,
 glass_bottles, plastic_bags, wrappers, sports_balls, homes_powered, x15,
 x16, wheel.
 
-The total weight of trash collected by Professor Trash Wheel is 246.74
+The total weight of trash collected by Professor Trash Wheel is 282.26
 and the total number of cigarette butts collected by Gwynnda in June of
 2022 is 1.812^{4}.
+
+## Problem 3
+
+### Create a single, well-organized dataset with all the information contained in these data files
+
+``` r
+zip_codes = read_csv("zillow_data/Zip Codes.csv")
+```
+
+    ## Rows: 322 Columns: 7
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (4): County, County Code, File Date, Neighborhood
+    ## dbl (3): State FIPS, County FIPS, ZipCode
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+Zip_zori_uc_sfrcondomfr_sm_month_NYC = read_csv("zillow_data/Zip_zori_uc_sfrcondomfr_sm_month_NYC.csv")
+```
+
+    ## Rows: 149 Columns: 125
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr   (6): RegionType, StateName, State, City, Metro, CountyName
+    ## dbl (119): RegionID, SizeRank, RegionName, 2015-01-31, 2015-02-28, 2015-03-3...
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
