--- a/p8105_hw2_fx2212.Rmd
+++ b/p8105_hw2_fx2212.Rmd
@@ -7,6 +7,7 @@ output: github_document
 ```{r}
 library(tidyverse)
 library(readxl)
+library(knitr)
 ```
 
 ## Problem 1 
@@ -131,7 +132,7 @@ prof_trash_wheel <- read_excel("202509 Trash Wheel Collection Data.xlsx", sheet 
 
 ```
 
-### Read and clean the Gwynnda Trash Wheel
+### Read and clean the Gwynns Falls Trash Wheel
 ```{r}
 gwynns_trash_wheel <- read_excel("202509 Trash Wheel Collection Data.xlsx", sheet = "Gwynns Falls Trash Wheel")  |> 
   janitor::clean_names()  |> 
@@ -170,16 +171,121 @@ gwynns_june_2022 =
 
 The number of observations in the resulting dataset is `r nrow(all_trash_wheel)` and the key variables include `r names(all_trash_wheel)`.
 
-The total weight of trash collected by Professor Trash Wheel is `r total_prof_weight` and the total number of cigarette butts collected by Gwynnda in June of 2022 is `r gwynns_june_2022`.
+The total weight of trash collected by Professor Trash Wheel is `r total_prof_weight` and the total number of cigarette butts collected by Gwynns in June of 2022 is `r gwynns_june_2022`.
 
 ## Problem 3
 
-### Create a single, well-organized dataset with all the information contained in these data files
+### Create a single, well-organized dataset with all the information contained in these data files--"rent_data"
 
 ```{r}
-zip_codes = read_csv("zillow_data/Zip Codes.csv")
-Zip_zori_uc_sfrcondomfr_sm_month_NYC = read_csv("zillow_data/Zip_zori_uc_sfrcondomfr_sm_month_NYC.csv")
+zip_codes = read_csv("zillow_data/Zip Codes.csv") |> 
+  janitor::clean_names() |> 
+  select(county, zip_code, neighborhood) |> 
+  mutate(
+    borough = case_when(
+      county == "Bronx" ~ "Bronx",
+      county == "Kings" ~ "Brooklyn", 
+      county == "New York" ~ "Manhattan",
+      county == "Queens" ~ "Queens",
+      county == "Richmond" ~ "Staten Island",
+      TRUE ~ county
+    ),
+    zip_code = as.character(zip_code)
+  ) |> 
+  distinct(zip_code, .keep_all = TRUE) |> 
+  filter(!is.na(neighborhood))
 
+zillow_rent = read_csv("zillow_data/Zip_zori_uc_sfrcondomfr_sm_month_NYC.csv", 
+                       col_types = cols(RegionName = col_character()),
+                       show_col_types = FALSE) |>
+  filter(RegionType == "zip") |>
+  select(RegionName, matches("^\\d{4}-\\d{2}-\\d{2}$")) |>
+  pivot_longer(
+    cols = -RegionName,
+    names_to = "date",
+    values_to = "rent_price"
+  ) |> 
+  mutate(
+    date = as.Date(date),
+    zip_code = RegionName
+  ) |>
+  select(zip_code, date, rent_price) |> 
+  filter(!is.na(rent_price))
+
+rent_data <- zillow_rent |> 
+  inner_join(zip_codes, by = "zip_code")
 
 ```
 
+The number of total observations is `r nrow(rent_data)`, the number of unique ZIP codes is `r n_distinct(rent_data$zip_code)`, and the number of unique neighborhoods is `r n_distinct(rent_data$neighborhood)`.
+
+### Finding ZIP codes appear in the ZIP code dataset but not in the Zillow Rental Price dataset
+
+```{r}
+missing_in_zillow = zip_codes |> 
+  anti_join(zillow_rent, by = "zip_code")
+```
+
+The number of ZIP codes appearing in the ZIP code dataset but not in the Zillow Rental Price dataset is `r nrow(missing_in_zillow)`. There might be some reasons:
+
+*  May be commercial or industrial areas with no residential rental data
+*  Might be newly developed areas not included during data collection
+*  Data coverage may be incomplete or Zillow lacks sufficient data points
+
+
+
+### comparing rental prices in January 2021 to prices in January 2020
+
+```{r}
+rent_jan_2020 = rent_data |> 
+  filter(year(date) == 2020, month(date) == 1)
+
+rent_jan_2021 = rent_data  |> 
+  filter(year(date) == 2021, month(date) == 1)
+
+rent_change = rent_jan_2020  |> 
+  select(zip_code, borough, neighborhood, rent_2020 = rent_price)  |> 
+  inner_join(
+    rent_jan_2021  |>  
+      select(zip_code, rent_2021 = rent_price),
+    by = "zip_code"
+  )  |> 
+  mutate(
+    rent_change = rent_2021 - rent_2020,
+    percent_change = (rent_2021 - rent_2020) / rent_2020 * 100
+  )
+
+top_drops = rent_change  |> 
+  arrange(percent_change)  |> 
+  head(10)
+
+top_drops_table = top_drops  |> 
+  select(
+    ZIP_Code = zip_code,
+    Borough = borough,
+    Neighborhood = neighborhood,
+    `Rent_Jan_2020` = rent_2020,
+    `Rent_Jan_2021` = rent_2021,
+    `Price_Drop` = rent_change,
+    `Percent_Drop` = percent_change
+  ) |> 
+  mutate(
+    across(c(`Rent_Jan_2020`, `Rent_Jan_2021`, `Price_Drop`), ~round(., 2)),
+    `Percent_Drop` = round(`Percent_Drop`, 2)
+  )
+
+kable(top_drops_table, 
+      caption = "Top 10 ZIP Codes with Largest Rent Drops from Jan 2020 to Jan 2021")
+
+```
+
+
+### comments
+
+```{r}
+borough_distribution = top_drops  |> 
+    count(Borough = borough)  |> 
+    arrange(desc(n))
+```
+
+We can find that Manhattan has the most ZIP codes in the top drops list (`r borough_distribution$n` ZIP codes), in fact, it completes the top 10, which may indicates that the COVID-19 impact: These significant rent drops likely reflect the substantial impact of the COVID-19 pandemic on New York City's rental market, particularly in high-density urban areas and communities reliant on commuters. The widespread adoption of remote work led many residents to move away from city centers, seeking more spacious and affordable housing options.
