--- a/p8105_hw2_fx2212.md
+++ b/p8105_hw2_fx2212.md
@@ -277,11 +277,11 @@ zillow_rent = read_csv("zillow_data/Zip_zori_uc_sfrcondomfr_sm_month_NYC.csv",
   filter(!is.na(rent_price))
 
 rent_data <- zillow_rent |> 
-  inner_join(zip_codes, by = "zip_code")
+  left_join(zip_codes, by = "zip_code")
 ```
 
-The number of total observations is 10129, the number of unique ZIP
-codes is 144, and the number of unique neighborhoods is 42.
+The number of total observations is 10450, the number of unique ZIP
+codes is 149, and the number of unique neighborhoods is 43.
 
 ### Finding ZIP codes appear in the ZIP code dataset but not in the Zillow Rental Price dataset
 
